(Client) Mejoras en el diseño y experiencia del usuario

--- a/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
@@ -167,7 +167,7 @@
                             solicitado el intercambio de tu libro <span
                                 class="bold">"{{bookOExchangeReservedList[i].title}}"</span> ofreciendo
                             su libro <span class="bold">"{{bookP.title}}"</span>. <br>
-                            Póngase en contacto con el usuario en el caso de que le parezca un intercambio justo.
+                            Póngase en contacto con el usuario en el caso de que te parezca un intercambio justo.
                         </div>
                     </div>
                     <div class="row mt-4 mb-4 mb-md-0">
@@ -212,7 +212,7 @@
             </div>
             <div class="col-10">
                 <p class="text-center">Al hacer click en <span class="bold">"Finalizar compra"</span> confirmas que te
-                    has puesto en contacto con el usuario que solicitó la compra y habeís llegado a un acuerdo en la
+                    has puesto en contacto con el usuario que solicitó la compra y habéis llegado a un acuerdo en la
                     compra de tu libro.
                 </p>
             </div>
@@ -308,7 +308,7 @@
             <div class="col-10">
                 <p class="text-center">Al hacer click en <span class="bold">"Finalizar intercambio"</span> confirmas que
                     te
-                    has puesto en contacto con el usuario que solicitó el intercambio y habeís llegado a un acuerdo en
+                    has puesto en contacto con el usuario que solicitó el intercambio y habéis llegado a un acuerdo en
                     el
                     intercambio de vuestros libros.
                 </p>
@@ -325,7 +325,7 @@
                         bookPExchangeReservedList[exchangeSelected],
                         petitionerExchangeReservedList[exchangeSelected],
                         bookOExchangeReservedList[exchangeSelected].id)" class="btn bgSecundario">Finalizar
-                    intercambio<i class="bi bi-bookmark-check"></i></button>
+                    intercambio <i class="bi bi-bookmark-check"></i></button>
             </div>
         </div>
     </div>
@@ -386,8 +386,8 @@
                 <button (click)="cancelExchange(
                     bookPExchangeReservedList[exchangeSelected],
                     petitionerExchangeReservedList[exchangeSelected],
-                    bookOExchangeReservedList[exchangeSelected].id);" class="btn bgSecundario">Confirmar<i
-                        class="bi bi-bookmark-check"></i></button>
+                    bookOExchangeReservedList[exchangeSelected].id);" class="btn bgSecundario">Confirmar cancelación <i
+                        class="bi bi-x-circle"></i></button>
             </div>
         </div>
     </div>
