--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
@@ -6,8 +6,17 @@
     width: 25vw;
 }
 
+.miniImgProfile {
+    width: 60px;
+    border-radius: 150px;
+}
+
 .thumbnail {
     height: 300px;
+}
+
+.border {
+    border-radius: 15px;
 }
 
 .valoracion {
