(Client) Mostrar los libros intercambiados de un usuario > profile component

--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.scss
@@ -131,3 +131,19 @@ button i {
         margin-left: 15vw;
     }
 }
+
+.exchangeIcon {
+    font-size: 80px;
+    font-weight: 20px;
+    color: rgba(99, 61, 16, 1);
+}
+
+.roundImgProfile {
+    width: 75px;
+    height: 75px;
+    border-radius: 150px;
+}
+
+.pointer {
+    cursor: pointer;
+}
