--- a/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/profile/profile.component.html
@@ -45,7 +45,8 @@
             <div (click)="tabSelected = 1" [class]="(tabSelected == 1) ? 'tabSelect col-4' : 'tab col-4'">
                 Mis libros subidos
             </div>
-            <div (click)="tabSelected = 2" [class]="(tabSelected == 2) ? 'tabSelect col-4' : 'tab col-4'">
+            <div (click)="tabSelected = 2; getExchangedBooks(user.id)"
+                [class]="(tabSelected == 2) ? 'tabSelect col-4' : 'tab col-4'">
                 Mis intercambios
             </div>
             <div (click)="tabSelected = 3; getSelledBooks(user.id)"
@@ -84,8 +85,86 @@
                 </div>
             </div>
         </div>
-        <div *ngIf="tabSelected == 2" class="row board">
 
+        <div *ngIf="tabSelected == 2" class="row board d-flex justify-content-center">
+            <div *ngIf="!bookOExchangedList.length" class="text-white my-4 text-center">
+                <h3>¿Todavía no has intercambiado ningún libro?</h3>
+                <h4>¡Vamos a echar un vistazo al catálogo y proponer un intercambio!</h4>
+            </div>
+
+            <div *ngFor="let exchangedBook of bookPExchangedList; let i = index" class="col-10 mt-5">
+                <div class="row bg-white p-3 border d-flex justify-content-center">
+                    <div class="col">
+                        <div class="row d-flex justify-content-center mt-3">
+                            <div class="col-6">
+                                <div class="row pointer" routerLink="/profile" [queryParams]="{'idUser': userPExchangedList[i].id}">
+                                    <div class="col-6 d-flex justify-content-center">
+                                        <div class="d-flex align-items-center">
+                                            <img src="data:image/jpg;base64,{{userPExchangedList[i].img}}" alt=""
+                                                class="roundImgProfile">
+                                        </div>
+                                    </div>
+                                    <div class="col-6 d-flex justify-content-start">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <h5 class="bold text-start">{{userPExchangedList[i].name}}</h5>
+                                            </div>
+                                            <div class="col-12">
+                                                <h5 class="bold text-start">{{userPExchangedList[i].surnames}}</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="row pointer" routerLink="/profile" [queryParams]="{'idUser': userOExchangedList[i].id}">
+                                    <div class="col-6 d-flex justify-content-end">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <h5 class="bold text-end">{{userOExchangedList[i].name}}</h5>
+                                            </div>
+                                            <div class="col-12">
+                                                <h5 class="bold text-end">{{userOExchangedList[i].surnames}}</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 d-flex justify-content-center">
+                                        <div class=" d-flex align-items-center">
+                                            <img src="data:image/jpg;base64,{{userOExchangedList[i].img}}" alt=""
+                                                class="roundImgProfile">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="row d-flex justify-content-center mt-3">
+                            <div class="col-4">
+                                <h5 *ngIf="user.id == userPExchangedList[i].id" class="text-center">Ofreciste:</h5>
+                                <h5 *ngIf="user.id != userPExchangedList[i].id" class="text-center">Ofreció:</h5>
+                                <div class=" d-flex flex-column align-items-center">
+                                    <img src="data:image/jpg;base64,{{bookPExchangedList[i].img}}" alt=""
+                                        class="thumbnail">
+                                </div>
+                                <h5 class="bold my-4 text-center">{{bookPExchangedList[i].title}}</h5>
+                            </div>
+                            <div class="col-4 col-lg-2 d-flex justify-content-center align-items-center">
+                                <i class="bi bi-arrow-left-right exchangeIcon"></i>
+                            </div>
+                            <div class="col-4">
+                                <h5 *ngIf="user.id == userPExchangedList[i].id" class="text-center">Solicitaste:</h5>
+                                <h5 *ngIf="user.id != userPExchangedList[i].id" class="text-center">Solicitó:</h5>
+                                <div class=" d-flex flex-column align-items-center">
+                                    <img src="data:image/jpg;base64,{{bookOExchangedList[i].img}}" alt=""
+                                        class="thumbnail">
+                                </div>
+                                <h5 class="bold my-4 text-center">{{ bookOExchangedList[i].title }}</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div *ngIf="tabSelected == 3" class="row board d-flex justify-content-center">
             <div *ngIf="!selledBookList.length" class="text-white my-4 text-center">
@@ -152,23 +231,21 @@
             <div class="text-center text-white my-2">
                 <h3>Libros subidos</h3>
             </div>
-            <div class="col-6 col-sm-4 col-md-3" *ngFor="let book of uploadedBooksList">
+            <div class="col-6 col-sm-4 col-md-3 d-flex align-items-stretch" *ngFor="let book of uploadedBooksList">
                 <div *ngIf="book.reserved > 0" class="reservedMark d-flex align-items-center">
                     <i class="bi bi-bookmark-star-fill"></i>
                     <span>Reservado</span>
                 </div>
                 <div class="row bg-white">
-                    <div class="col-12 d-flex justify-content-center">
+                    <div class="col-12 d-flex justify-content-center mt-3">
                         <img class="thumbnail" src="data:image/jpg;base64,{{book.img}}" alt="">
                     </div>
                     <div class="col-12">
                         <h3 class="titleCard text-center mt-1">{{book.title}}</h3>
                         <p class="text-center mb-1">{{book.author}}</p>
                     </div>
-                    <div class="col-12 d-flex justify-content-center mb-3">
-                        <button *ngIf="!userId" [routerLink]="'/modifyBook/' + book.id" class="btn bgSecundario">Editar
-                            producto</button>
-                        <button *ngIf="userId" [routerLink]="'/productView/' + book.id + '/' + userId"
+                    <div class="col-12 d-flex justify-content-center">
+                        <button [routerLink]="'/productView/' + book.id + '/' + userId"
                             class="btn bgSecundario mb-4">Ver libro <i class="bi bi-book"></i></button>
                     </div>
                 </div>
