(Client) Mandar correos al solicitar compra o intercambio de un libro

--- a/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/confirm-exchanges/confirm-exchanges.component.html
@@ -324,7 +324,7 @@
                 <button (click)="confirmExchange(
                         bookPExchangeReservedList[exchangeSelected],
                         petitionerExchangeReservedList[exchangeSelected],
-                        bookOExchangeReservedList[exchangeSelected].id)" class="btn bgSecundario">Finalizar
+                        bookOExchangeReservedList[exchangeSelected])" class="btn bgSecundario">Finalizar
                     intercambio <i class="bi bi-bookmark-check"></i></button>
             </div>
         </div>
@@ -386,7 +386,7 @@
                 <button (click)="cancelExchange(
                     bookPExchangeReservedList[exchangeSelected],
                     petitionerExchangeReservedList[exchangeSelected],
-                    bookOExchangeReservedList[exchangeSelected].id);" class="btn bgSecundario">Confirmar cancelación <i
+                    bookOExchangeReservedList[exchangeSelected]);" class="btn bgSecundario">Confirmar cancelación <i
                         class="bi bi-x-circle"></i></button>
             </div>
         </div>
