--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -154,18 +154,18 @@
                 </div>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <button (click)="confirmExchange(book, userOwner.id)" class="btn bgSecundario">Seleccionar <i
+                        <button (click)="confirmExchange(book, userOwner)" class="btn bgSecundario">Seleccionar <i
                                 class="bi bi-capslock"></i></button>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-6 d-flex justify-content-end">
+            <div class="col d-flex justify-content-center">
                 <button class="btn outlineSecondary" (click)="showModal = false">Cancelar <i
                         class="bi bi-arrow-counterclockwise"></i></button>
             </div>
-            <div *ngIf="!bookList.length" class="col-6 d-flex justify-content-start">
+            <div *ngIf="!bookList.length" class="col d-flex justify-content-center">
                 <button routerLink="/uploadBook" class="btn bgSecundario">Subir un libro <i
                         class="bi bi-arrow-up-circle"></i></button>
             </div>
