--- a/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
+++ b/Cliente-Angular/src/app/pages/main-module/pages/product-view/product-view.component.html
@@ -1,11 +1,14 @@
 <div *ngIf="reserved" class="mt-4 container text-center alert alert-warning">
     Se ha reservado el libro, será el dueño quien que se ponga en contacto contigo.
 </div>
+<div *ngIf="bookReserved" class="mt-4 container text-center alert alert-warning">
+    Este libro ya está reservado para una compra o intercambio.
+</div>
 <div *ngIf="reserveError" class="mt-4 container text-center alert alert-warning">
     No se ha podido reservar el libro.
 </div>
 
-<div class="container mt-4">
+<div *ngIf="book" class="container mt-4">
     <div class="row book">
         <div class="col-4 bgPrimario colImg">
             <div class="d-flex justify-content-center">
@@ -40,11 +43,11 @@
                         <i class="bi bi-arrow-counterclockwise"></i></button>
                 </div>
                 <div *ngIf="authUser.id != userOwner.id" class="col d-flex justify-content-center">
-                    <button [disabled]="reserved ? true : false" (click)="chooseBook()"
+                    <button [disabled]="(reserved || bookReserved) ? true : false" (click)="chooseBook()"
                         class="btn bgSecundario">Intercambiar <i class="bi bi-arrow-left-right"></i></button>
                 </div>
                 <div *ngIf="authUser.id != userOwner.id" class="col d-flex justify-content-center">
-                    <button [disabled]="reserved ? true : false" (click)="showPurchaseModal = true"
+                    <button [disabled]="(reserved || bookReserved) ? true : false" (click)="showPurchaseModal = true"
                         class="btn bgSecundario">Comprar <i class="bi bi-cart-check-fill"></i></button>
                     <!-- routerLink="/purchase/1" -->
                 </div>
@@ -69,7 +72,7 @@
     </div>
 
     <div class="row user mt-4">
-        <div class="col-5">
+        <!-- <div class="col-5">
             <div class="row">
                 <p class="bold text-center my-3">Otros libros del usuario:</p>
                 <div *ngFor="let i of [1,2]" class="col-12 mb-3">
@@ -84,18 +87,30 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-7 bg-white profile">
+            </div >
+        </div> -->
+        <!-- <div class="col-7 bg-white profile"> -->
+        <div class="col-12 bg-white profile py-4">
             <div class="row">
-                <div class="col-7 mt-4 d-flex flex-column align-self-center">
+                <div class="col-7">
                     <h3 class="text-center bold mt-2">{{userOwner.name}} {{userOwner.surnames}}</h3>
-                    <p class="text-center mt-4">8 productos</p>
-                    <p class="text-center mt-4"><span class="bold">Ubicación: &nbsp;</span> {{userOwner.location}}</p>
-                    <div class="col-12 d-flex justify-content-center">
-                        <button routerLink="/profile" [queryParams]="{'idUser': userOwner.id}"
-                            class="btn bgSecundario mt-3">Visitar perfil <i
-                                class="bi bi-person-lines-fill"></i></button>
+                    <p class="text-center mt-3">{{ countBooks }} productos <i class="bi bi-cart"></i></p>
+                    <div class="row d-flex justify-content-end mt-2">
+                        <div class="col-3">
+                            <p class="valoracion text-center">Valoración del usuario:</p>
+                        </div>
+                        <div class="col-6">
+                            <app-rate-stars [isUser]="true" [stars]="round(userOwner.rating)"></app-rate-stars>
+                        </div>
+                    </div>
+                    <p class="text-center mt-1 location"><span class="bold">Ubicación: &nbsp;</span>
+                        {{userOwner.location}} <i class="bi bi-geo-alt"></i></p>
+                    <div class="row mt-4">
+                        <div class="col-12 d-flex justify-content-center">
+                            <button routerLink="/profile" [queryParams]="{'idUser': userOwner.id}"
+                                class="btn bgSecundario">Visitar perfil <i
+                                    class="bi bi-person-lines-fill"></i></button>
+                        </div>
                     </div>
                     <!-- <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d666.2203779737522!2d-4.478393117679868!3d37.4112044661761!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6d70ce974c2423%3A0x440c7613e1515361!2s14900%20Lucena%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2ses!4v1649783284300!5m2!1ses!2ses"
@@ -104,11 +119,11 @@
                     <!-- <google-map class="map" width="300px" height="200px" [center]="center" [zoom]="zoom">
                     </google-map> -->
                 </div>
-
+                <!--  -->
                 <div class="col-5">
                     <div class="row">
-                        <div class="col-12 mt-4 d-flex align-items-center">
-                            <img class="imgProfile mt-5" src="data:image/jpg;base64,{{userOwner.img}}" alt="">
+                        <div class="col-12 d-flex align-self-center">
+                            <img class="imgProfile" src="data:image/jpg;base64,{{userOwner.img}}" alt="">
                         </div>
                     </div>
                 </div>
@@ -134,8 +149,10 @@
         </div>
         <div *ngIf="bookList.length" class="row mb-4 d-flex justify-content-center">
             <div class="col-10">
-                <p class="text-center">Al hacer click en <span class="bold">"Seleccionar"</span> en un libro, se le informará al
-                    dueño de "{{book.title}}" de tu solicitud de intercambio con tu propuesta de libro. Será él quien decida
+                <p class="text-center">Al hacer click en <span class="bold">"Seleccionar"</span> en un libro, se le
+                    informará al
+                    dueño de "{{book.title}}" de tu solicitud de intercambio con tu propuesta de libro. Será él quien
+                    decida
                     si aceptar el intercambio y ponerse en contacto contigo o no.</p>
             </div>
         </div>
@@ -173,7 +190,8 @@
     </div>
 </div>
 
-<div id="myModal" class="modal" [style]="showPurchaseModal ? 'display: block;' : 'display: none;'">
+<div *ngIf="showPurchaseModal" id="myModal" class="modal"
+    [style]="showPurchaseModal ? 'display: block;' : 'display: none;'">
     <!-- Modal content -->
     <div class="modal-content">
         <div class="row mb-4 d-flex justify-content-center">
